--- a/style.css
+++ b/style.css
@@ -66,41 +66,38 @@ a:hover {
 @media (max-width: 730px) {
 
     #menu {
-        display: none;
+              display: block;
         position: absolute;
         width: 100%;
         top: 70px;
         right: 0px;
-        background: #107acc;
-        height: 0;
+        background: #e7e7e7;
         transition: 0.6s;
         z-index: 1000;
+        height: 0px;
         visibility: hidden;
         overflow-y: hidden;
-    }
-
-    #nav.active #menu {
+      }
+      #nav.active #menu {
         height: calc(100vh - 70px);
         visibility: visible;
         overflow-y: auto;
-    }
-
-    #menu a {
+      }
+      #menu a {
         padding: 1rem 0;
         margin: 0 1rem;
-        border-bottom: 2px solid #000000;
-    }
-    #bnt-mobile {
+        border-bottom: 2px solid rgba(0, 0, 0, 0.05);
+      }
+      #btn-mobile {
         display: flex;
         padding: 0.5rem 1rem;
         font-size: 1rem;
-        background: none;
         border: none;
+        background: none;
         cursor: pointer;
         gap: 0.5rem;
-    }
-
-    #hamburger {
+      }
+      #hamburger {
         border-top: 2px solid;
         width: 20px;
       }
@@ -114,21 +111,17 @@ a:hover {
         margin-top: 5px;
         transition: 0.3s;
         position: relative;
-    }
-
-    #nav.active #hamburger {
+      }
+      #nav.active #hamburger {
         border-top-color: transparent;
-    }
-
-    #nav.active #hamburge::before {
+      }
+      #nav.active #hamburger::before {
         transform: rotate(135deg);
-    }
-
-    #nav.active #hamburge::after {
+      }
+      #nav.active #hamburger::after {
         transform: rotate(-135deg);
         top: -7px;
-
-    }
+      }
 
     #apresentaçao {
         margin: 40px 50px;
