--- a/esporte.css
+++ b/esporte.css
@@ -3,11 +3,11 @@
 body {
     padding: 0;
     margin: 0;
-    background-color: white;
+    background-color: white
 }
 
-a {
-    color: black;
+#menu a {
+    color: rgb(0, 0, 0);
     text-decoration: none;
     font-family: 'Inter', sans-serif;
 }
@@ -68,20 +68,11 @@ h1{
     font-weight: 400;
 }    
 
-h2{
-    display: flex;
-    font-family: 'Inter', sans-serif;
+
+#campeonato {
+    display:inline;
     align-items: center;
-    justify-content: center;
-    font-weight: 400;
-}    
-
-#ns {
-    
-}
-
-#nova {
-    display: flex;
+    height: 100vh;
     align-items: center;
     justify-content: center;
     margin-top: 40px;
@@ -89,39 +80,58 @@ h2{
 
 #esportemenu {
     display: inline;
-    position: absolute;
-    padding-bottom:30px ;
-    left: 0px;
     z-index: 4;
+    position: absolute;
+    left: 0px;
     font-weight: 700;
-    font-size: 20px;
+    font-size: 25px;
+    
+}
+#esportemenu a {
+    color: black;
+    text-decoration: none;
+    font-family: 'Inter', sans-serif;
+    
 }
 
 #quem {
-    padding-bottom: 10px;
+    display: none;
     cursor: pointer;
     list-style: none;
     text-transform: uppercase;
-    margin-top: 10px;
+    padding-bottom: 50px;
+    display: flex;
+
 }
 
 #contatoesporte {
     cursor: pointer;
     list-style: none;
     text-transform: uppercase;
-    padding-bottom: 10px;
+    padding-bottom: 50px;
+    display: flex;
 }
 
 #campeonatos {
     cursor: pointer;
     list-style: none;
     text-transform: uppercase;
-    padding-bottom: 10px;
+    padding-bottom: 50px;
+    display: flex;
 }
 
-#jogadores {
+#projeto {
     cursor: pointer;
     list-style: none;
     text-transform: uppercase;
-    padding-bottom: 10px;
+    padding-bottom: 50px;
+    display: flex;
+}
+
+
+#video {
+    display: flex;
+    align-items:center ;
+    justify-content: center;
+
 }
