--- a/style.css
+++ b/style.css
@@ -1,136 +1,132 @@
+
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap');
 body {
     padding: 0;
     margin: 0;
-    /*background-color: rgb(	211,211,211);*/
     background-color: #dadeeb;
 }
 
+body,
+ul {
+  margin: 0px;
+  padding: 0px;
+}
+
 a {
-    color: black;
-    text-decoration: none;
-    font-family: 'Inter', sans-serif;
+  color: black;
+  text-decoration: none;
+  font-family: sans-serif;
 }
 
 a:hover {
-    background-color: #0f72bd;
+  background: rgba(0, 0, 0, 0.05);
 }
 
 #logo {
-    display: flex;
-    width: 90px;
+    width: 80px;
     border-radius: 50%;
+    margin-right: 1.9rem;
 }
 
 #header {
-   box-sizing: border-box;
-   height: 70px;
-    width: 100%;
-    padding: 3rem ;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background: #00498b;
+  box-sizing: border-box;
+  height: 90px;
+  padding: 1rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background: #00498b;
 }
 
 #menu {
-    display: flex;
-    list-style: none;
-    gap:.9rem;
+  display: flex;
+  list-style: none;
+  gap: 0.9rem;
 }
 
 #menu a {
-    display: block;
-    padding: 1.5rem; 
+  display: block;
+  padding: 0.9rem;
 }
 
-#bnt-mobile {
-    display: none;
+#btn-mobile {
+  display: none;
 }
 
 #apresentaçao {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin: 10px 75px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 10px 75px;
 }
 
 #figura {
-    opacity: 1;
-    transition: opacity 0.4s ease;
-    width: 800px;
-    height: 400px;
+  width: 700px;
+  height: 350px;
 }
 
 
-@media (max-width: 730px) {
+@media (max-width: 700px) {
+  #menu {
+    display: block;
+    position: absolute;
+    width: 100%;
+    top: 70px;
+    right: 0px;
+    background: #e7e7e7;
+    transition: 0.6s;
+    z-index: 1000;
+    height: 0px;
+    visibility: hidden;
+    overflow-y: hidden;
+  }
+  #nav.active #menu {
+    height: calc(100vh - 70px);
+    visibility: visible;
+    overflow-y: auto;
+  }
+  #menu a {
+    padding: 1rem 0;
+    margin: 0 1rem;
+    border-bottom: 2px solid rgba(0, 0, 0, 0.05);
+  }
+  #btn-mobile {
+    display: flex;
+    padding: 0.5rem 1rem;
+    font-size: 1rem;
+    border: none;
+    background: none;
+    cursor: pointer;
+    gap: 0.5rem;
+  }
+  #hamburger {
+    border-top: 2px solid;
+    width: 20px;
+  }
+  #hamburger::after,
+  #hamburger::before {
+    content: '';
+    display: block;
+    width: 20px;
+    height: 2px;
+    background: currentColor;
+    margin-top: 5px;
+    transition: 0.3s;
+    position: relative;
+  }
+  #nav.active #hamburger {
+    border-top-color: transparent;
+  }
+  #nav.active #hamburger::before {
+    transform: rotate(135deg);
+  }
+  #nav.active #hamburger::after {
+    transform: rotate(-135deg);
+    top: -7px;
+  }
 
-    #menu {
-              display: block;
-        position: absolute;
-        width: 100%;
-        top: 70px;
-        right: 0px;
-        background: #e7e7e7;
-        transition: 0.6s;
-        z-index: 1000;
-        height: 0px;
-        visibility: hidden;
-        overflow-y: hidden;
-      }
-      #nav.active #menu {
-        height: calc(100vh - 70px);
-        visibility: visible;
-        overflow-y: auto;
-      }
-      #menu a {
-        padding: 1rem 0;
-        margin: 0 1rem;
-        border-bottom: 2px solid rgba(0, 0, 0, 0.05);
-      }
-      #btn-mobile {
-        display: flex;
-        padding: 0.5rem 1rem;
-        font-size: 1rem;
-        border: none;
-        background: none;
-        cursor: pointer;
-        gap: 0.5rem;
-      }
-      #hamburger {
-        border-top: 2px solid;
-        width: 20px;
-      }
-      #hamburger::after,
-      #hamburger::before {
-        content: '';
-        display: block;
-        width: 20px;
-        height: 2px;
-        background: currentColor;
-        margin-top: 5px;
-        transition: 0.3s;
-        position: relative;
-      }
-      #nav.active #hamburger {
-        border-top-color: transparent;
-      }
-      #nav.active #hamburger::before {
-        transform: rotate(135deg);
-      }
-      #nav.active #hamburger::after {
-        transform: rotate(-135deg);
-        top: -7px;
-      }
-
-    #apresentaçao {
-        margin: 40px 50px;
-    }
-
-    #figura {
-        width: 200px;
-        height: 100px;
-    }
-
-    
+  #figura {
+    width: 400px;
+    height: 250px;
+  }
 }
