--- a/esporte.css
+++ b/esporte.css
@@ -19,7 +19,7 @@ a {
 }
 
 a:hover {
-  background: rgba(0, 0, 0, 0.05);
+  background: rgba(0, 0, 0, 0.1);
 }
 
 #logo {
@@ -61,73 +61,48 @@ h1{
     font-weight: 400;
 }    
 
-
-#campeonato {
-    display:inline;
-    align-items: center;
-    height: 100vh;
-    align-items: center;
-    justify-content: center;
-    margin-top: 40px;
-}
-
-#esportemenu {
-    display: inline;
-    z-index: 4;
-    position: absolute;
-    left: 0px;
-    font-weight: 700;
-    font-size: 25px;
-    
-}
-#esportemenu a {
-    color: black;
-    text-decoration: none;
-    font-family: 'Inter', sans-serif;
-    
-}
-
-#quem {
-    display: none;
-    cursor: pointer;
-    list-style: none;
-    text-transform: uppercase;
-    padding-bottom: 50px;
-    display: flex;
-
-}
-
-#contatoesporte {
-    cursor: pointer;
-    list-style: none;
-    text-transform: uppercase;
-    padding-bottom: 50px;
-    display: flex;
-}
-
-#campeonatos {
-    cursor: pointer;
-    list-style: none;
-    text-transform: uppercase;
-    padding-bottom: 50px;
-    display: flex;
-}
-
-#projeto {
-    cursor: pointer;
-    list-style: none;
-    text-transform: uppercase;
-    padding-bottom: 50px;
-    display: flex;
-}
-
-
 #video {
-    display: flex;
-    align-items:center ;
-    justify-content: center;
+  display: flex;
+  align-items:center ;
+  justify-content: center;
 
 }
+
+footer{
+  display: flex;
+  margin-top: 70px;
+  text-decoration: none;
+  font-family: sans-serif;
+  font-weight: 100;
+  height: 70px;
+  background: #00498b;
+  justify-content: center;
+  margin-bottom: 0;
+}
+
+h5 {
+  text-decoration: none;
+  font-family: sans-serif;
+  font-weight: 100;
+}
+
+.creditos {
+  color: black;
+  pointer-events: painted;
+  text-decoration: underline;
+}
+
+.creditos :hover {
+  color: white;
+}
+
+
+
+h5 a:hover {
+  color: white;
+  background: none;
+}
+
 
 @media (max-width: 600px) {
     #menu {
