--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ a {
 }
 
 a:hover {
-  background: rgba(0, 0, 0, 0.05);
+  background: rgba(0, 0, 0, 0.1);
 }
 
 #logo {
@@ -28,14 +28,22 @@ a:hover {
     margin-right: 1.9rem;
 }
 
+#logo {
+  font-family: sans-serif;
+  font-weight: 600;
+  font-size: 25px;
+}
+
 #header {
   box-sizing: border-box;
+  width: 100%;
   height: 90px;
   padding: 1rem;
   display: flex;
   align-items: center;
   justify-content: center;
   background: #00498b;
+
 }
 
 #menu {
@@ -53,7 +61,7 @@ a:hover {
   display: none;
 }
 
-#apresentaçao {
+/*#apresentaçao {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -63,10 +71,36 @@ a:hover {
 #figura {
   width: 700px;
   height: 350px;
+}*/
+
+#figura {
+  width: 100%;
+  height: 658px;
 }
 
+#apresentaçao {
+  width: 100%;
+}
 
-@media (max-width: 700px) {
+#texto {
+  position: absolute;
+  top: 62%; /* Ajuste conforme necessário */
+  left: 10%; /* Ajuste conforme necessário */
+  /*transform: translate(-50%, -50%); */
+  padding: 10px; /* Espaçamento interno do texto */
+  color: rgb(0, 0, 0);
+}
+#texto2 {
+
+  
+  position: absolute;
+  top: 66%; /* Ajuste conforme necessário */
+  left: 10%; /* Ajuste conforme necessário */
+  /*transform: translate(-50%, -50%); */
+  padding: 10px; /* Espaçamento interno do texto */
+}
+
+@media (max-width: 600px) {
   #menu {
     display: block;
     position: absolute;
@@ -123,10 +157,5 @@ a:hover {
   #nav.active #hamburger::after {
     transform: rotate(-135deg);
     top: -7px;
-  }
-
-  #figura {
-    width: 400px;
-    height: 250px;
   }
 }
